<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android=
    "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.ankitsiva.teamcaesium.controllers.ShelterContentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ShelterInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/shelterName"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/prompt_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/shelterAddress"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/prompt_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="@string/prompt_address" />

            <TextView
                android:id="@+id/shelterCapacity"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/prompt_capacity"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="@string/prompt_capacity" />

            <TextView
                android:id="@+id/shelterPhone"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/prompt_phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="@string/prompt_phone" />

            <TextView
                android:id="@+id/shelterLongitude"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/prompt_longitude"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/shelterLatitude"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/prompt_latitude"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/shelterRestrictions"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/prompt_gender"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/shelterNotes"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@android:string/unknownName"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="claimBed"
                android:text="@string/Claim" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
